--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,22 +4,23 @@
     padding: 0;
     font-family: 'Tilt Neon', sans-serif;
 }
+
+body{
+    background-color: #003026;
+}
+
 #root{
     width: 100%;
+    height: 100vh;
 }
-.miVideo{
-    display: block;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: -1;
-}
-.day{
-    background-color: #fff2f2;
-    z-index: 0;
-    color: rgba(0, 0, 0, 0.422);
-    text-shadow: 1px 2px 3px rgba(44, 44, 186, 0.609);
-}
+
+
 .none{
     display: none;
 }
+
+.textNav{
+    text-shadow: #003026;
+    color: black;
+}
+
