--- a/src/styles/barraNav.css
+++ b/src/styles/barraNav.css
@@ -4,22 +4,26 @@
     align-items: center;
     margin-bottom: 40px;
 }
+
 .switch{
-    width: 80px;
-    height: 40px;
+    width: 60px;
+    height: 30px;
     position: absolute;
     top: 18px;
     left: 20px;
     display: flex;
+    border: 1px solid #0000001f;
     border-radius: 100px;
     outline: none;
-    background-color: #00000041;
+    background-color: #0000001f;
     justify-content: center;
     align-items: center;
+    transition: 10s ease all;
 }
+
 .switch span{
     width: 100%;
-    height: 30px;
+    height: 20px;
     display: block;
     background: none;
     display: flex;
@@ -27,38 +31,45 @@
     justify-content: center;
     align-items: center;
 }
+
 .switch img{
-    width: 25px;
-    height: 25px;
-    filter: invert(100%) sepia(0%) saturate(7477%) hue-rotate(117deg) brightness(110%) contrast(101%);
+    width: 20px;
+    height: 20px;
+    filter: invert(99%) sepia(0%) saturate(472%) hue-rotate(214deg) brightness(113%) contrast(100%);
     transition: 2ms ease all;
 }
+
 .spanOne{
     float: left;
 }
+
 .spanTwo{
     float: right;
 }
+
 .switch::after{
     content: "";
     display: block;
     width: 35px;
     height: 35px;
     position: absolute;
-    background-color: #c4c4c4;
-    top: 0;
+    background-color: #003026;
+    top: -2px;
     left: unset;
-    right: 0;
+    right: -1px;
     border-radius: 100px;
-    transition: 2s ease all;
+    transition: 2ms ease all;
 }
+
 .modActive{
     filter: none;
 }
+
 .modActive::after{
-    left: 0;
+    left: -1px;
     right: unset;
 }
+
 nav{
     display: block;
     float: right;
@@ -67,23 +78,39 @@ nav{
     background-color: #00000041;
     box-shadow: 1px 10px 5px 10px #00000041;
 }
+
 ul{
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
 }
+
 li{
     list-style: none;
     padding: 10px 15px;
     margin-top: 10px;
 }
-a{
+
+.firsText{
     font-size: 22px;
     text-decoration: none;
-    color: #ffffffb6;
-    transition:all .3s ease-in-out
+    color: #eafff6;
+    transition:all .3s ease-in-out;
+    text-shadow: 0px 1px 1px #01d194;
 }
-a:hover{
-    color: #ffffff;
+
+.firsText:hover{
+    color: #01d194;
 }
+@media(max-width:415px){
+    ul{
+        justify-content: center;
+    }
+}
+@media(max-width:415px){
+    .firsText{
+        font-size: 17px;
+    }
+}
+
