--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,24 +1,26 @@
 .networksSocial{
-    width: 90%;
+    width: 100%;
+    height: 80vh;
     margin: auto;
-    position: absolute; 
-    top: 20%;
-    bottom: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    animation: movimiento 2s infinite linear alternate;
+    justify-content: space-evenly;
+    align-items: center;
 }
-img{
+
+.socialImg{
+    padding: 10px;
     width: 50px;
+    filter: invert(99%) sepia(0%) saturate(472%) hue-rotate(214deg) brightness(113%) contrast(100%);
 }
-@keyframes movimiento{
-    from{
-        margin-top: 40px;
-        margin-bottom: 0px;
-    }
-    to{
-        margin-bottom: 40px;
-        margin-top: 0px;
+
+.socialImg:hover{
+    filter: invert(76%) sepia(97%) saturate(238%) hue-rotate(92deg) brightness(95%) contrast(96%);
+}
+
+@media(max-width:780px){
+    .networksSocial{
+        flex-direction: column;
+        margin: auto;
     }
 }
