--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,68 +1,182 @@
-.welcome{
-    width: 80%;
+.welcomeGene{
+    width: 70%;
     display: flex;
     justify-content: center;
-    margin: 40px auto;
+    margin: 80px auto 0;
     text-transform: uppercase;
-    color: #ffffffce;
     font-size: 25px;
     align-items: center;
-}
-.textDecoration{
-    text-shadow: 1px 10px 10px #00000079;
-}
-.image{
-    width: 18%;
-    display: flex;
-    margin: auto;
-    border-radius: 20px;
-    color: #ffffffce;
-    border-radius: 10px 80px;
-    box-shadow: 1px 2px 10px 15px #00000079;
-    background-color: #000000ea;
-}
-.curriculum{
-    width: 40%;
-    margin: 60px auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #ffffffce;
-    flex-direction: column;
-    font-size: 22px;
-}
-.downCurri{
-    text-decoration: underline;
-}
-.downCurri:hover{
-    color: #0008ff;
-}
-.imgs{
-    position: absolute; 
-    top: 5%; 
-    bottom: 0;
-    left: 2%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    animation: movimiento 2s infinite linear alternate;
-}
-.img{
-    width: 50px;
-    height: 50px;
-    border-radius: 10px;
-}
-.img:hover{
-    padding-left: 5px;
+    color: #eafff6;
 }
 
-@keyframes movimiento{
-    from{
-        margin-top: 40px;
-        margin-bottom: 0px;
+.textDecoration{
+    text-shadow: 0px 1px 1px #01d194;
+}
+
+.curriculumGene{
+    width: 80%;
+    height: 65vh;
+    margin: 11px auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #eafff6;
+}
+
+.curri{
+    position: relative;
+    left: 50px;
+    width: 45%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.curriDownload{
+    margin-top: 60px;
+}
+
+.animationImage{
+    position: relative;
+    margin: 10% auto 0;
+    width: 210px;
+    height: 250px;
+    background: linear-gradient(90deg, #003026,#01d194,#eafff6);
+    border-radius: 10px 80px;
+}
+
+.bgAnimation::before, .bgAnimation::after{
+    content: "";
+    position: absolute;
+    left: -8px;
+    top: -8px;
+    background: linear-gradient(120deg, #003026,#01d194,#eafff6);
+    background-size: 300%;
+    width: calc(100% + 16px);
+    height: calc(100% + 16px);
+    z-index: -1;
+    animation: bGragient 10s infinite;
+    border-radius: 10px 80px;
+}
+
+@keyframes bGragient{
+    0% {
+        background-position: 0% 200%;
     }
-    to{
-        margin-bottom: 40px;
-        margin-top: 0px;
+    50%{
+        background-position: 200% 0%;
+    }
+    100%{
+        background-position: 0% 330%;
     }
 }
+
+.bgAnimation::after{
+    filter: brightness(1.4);
+    filter: drop-shadow(16px 16px 20px #fff);
+    filter: blur(15px);
+}
+
+.image{
+    width: 100%;
+    height: 250px;
+    margin: auto;
+    border-radius: 10px 80px;
+}
+
+.downCurri{
+    text-decoration: underline;
+    color: #01d194;
+}
+
+.downCurri:hover{
+    color: #fff;
+}
+
+.about{
+    width: 50%;
+    display: flex;
+    text-align: center;
+}
+
+.about h3{
+    width: 70%;
+}
+
+@media(max-width:1115px){
+    .welcomeGene{
+        margin: 30px auto 0;
+    }
+
+    .curriculumGene{
+        width: 100%;
+    }
+}
+@media(max-width:780px){
+    .welcomeGene{
+        width: 100%;
+    }
+    .curriculumGene{
+        flex-direction: column;
+        height: auto;
+    }
+    .curri{
+        position: initial;
+    }
+    .about {
+        width: 100%;
+        margin: 20px auto;
+        justify-content: center;
+    }
+}
+@media(max-width:545px){
+    .welcomeGene{
+        font-size: 17px;
+    }
+    .curriculumGene{
+        flex-direction: column;
+        height: auto;
+    }
+    .curri{
+        position: initial;
+    }
+    .about h3{
+        font-size: 15px;
+    }
+}
+@media(max-width:375px){
+    .welcomeGene{
+        width: 90%;
+        font-size: 11px;
+    }
+    .curriculumGene{
+        flex-direction: column;
+        height: auto;
+    }
+    .curri{
+        width: 100%;
+        position: initial;
+    }
+    .about h3{
+        font-size: 15px;
+    }
+}
+@media(max-width:280px){
+    .welcomeGene{
+        font-size: 10px;
+    }
+
+    .curriculumGene{
+        flex-direction: column;
+        height: auto;
+    }
+    .curri{
+        position: initial;
+    }
+    .about h3{
+        font-size: 15px;
+    }
+}
+
