--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -125,7 +125,7 @@ p{
     position: absolute;
     width: 420px;
     height: 420px;
-    background-color: #00000080;
+    background-color: #01d194;
     box-shadow: 1px 1px 15px #000000ab;
     bottom: 0;
     bottom: 0;
@@ -138,7 +138,8 @@ p{
     bottom: 0;
     bottom: 0;
     right: 5%;
-    animation:scale-up-horizontal-center 0.4s
+    animation:scale-up-horizontal-center 0.4s;
+    filter: grayscale(100%);
 }
 
 .downCurri{
@@ -165,16 +166,15 @@ p{
 }
 
 .containerProjects{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
     width: 100%;
-    margin: 20px auto;
     text-align: center;
 }
 
 .cart{
-    width: 60%;
+    width: 80%;
     margin: auto;
     border-radius: 10px;
     padding: 20px;
@@ -186,7 +186,7 @@ p{
     margin: 10px;
     font-size: 25px;
     font-weight: bold;
-    color: #cdfee7;
+    color: #003026;
     text-transform: uppercase;
 }
 
@@ -204,7 +204,6 @@ p{
 .dataCart{
     width: 90%;
     margin: 10px auto;
-    background-color: #003026;
     border-radius: 10px;
     padding: 20px;
 }
@@ -222,8 +221,8 @@ p{
 .btnLink{
     padding: 10px 40px;
     text-decoration: none;
-    color: #003026;
-    background-color: #cdfee7;
+    color: #cdfee7;
+    background-color: #003026;
     border-radius: 10px;
 }
 
