--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -163,13 +163,15 @@ p{
     text-transform: uppercase;
     font-size: 40px;
     text-shadow: 0px 1px 1px #01d194;
+    margin: 100px auto;
 }
 
 .containerProjects{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
-    width: 100%;
+    width: 90%;
+    margin: auto;
     text-align: center;
 }
 
@@ -183,7 +185,6 @@ p{
 }
 
 .nameProject{
-    margin: 10px;
     font-size: 25px;
     font-weight: bold;
     color: #003026;
@@ -202,8 +203,6 @@ p{
 }
 
 .dataCart{
-    width: 90%;
-    margin: 10px auto;
     border-radius: 10px;
     padding: 20px;
 }
