--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,6 +32,20 @@ nav{
     width: 100%;
 }
 
+.menu{
+    width: 30px;
+    margin: 20px;
+    filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(217deg) brightness(109%) contrast(102%);
+}
+
+.cancel{
+    position: absolute;
+    width: 15px;
+    filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(217deg) brightness(109%) contrast(102%);
+    top: 5%;
+    left: 10%;
+}
+
 ul{
     width: 100%;
     display: flex;
@@ -61,53 +75,35 @@ p{
     color: #01d194;
 }
 
+.containerHome{
+    display: flex;
+    width: 100%;
+    height: 90vh;
+}
+
 .animationImage {
     position: absolute;
-    width: 63.7%;
-    top: 73%;
-    left: 0;
-    height: 2px;
+    width: 100%;
+    top: 30%;
+    height: 5px;
     background: linear-gradient(90deg,#003026,#01d194,#eafff6);
     z-index: -1;
 }
 
-.bgAnimation::before{
-    position: absolute;
-    left: -8px;
-    top: -8px;
-    background: linear-gradient(120deg,#01d194,#eafff6);
-    background-size: 200%;
-    width: calc(100% + 10px);
-    height: calc(100% + 10px);
-    z-index: -1;
-}
-
 .position2{
-    top: 90%;
-}
-
-.position3{
-    width: 5%;
-    top: 73%;
-    left: 94.8%;
-}
-
-.position4{
-    width: 5%;
-    top: 90%;
-    left: 94.8%;
+    top: 86%;
 }
 
 .curriculumGene {
     width: 50%;
-    height: 95vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     text-align: justify;
     color: #eafff6;
     justify-content: center;
-    margin: 0 85px;
-    animation:scale-up-horizontal-center 0.4s
+    margin: auto;
+    animation:scale-up-horizontal-center 0.4s;
 }
 
 .name{
@@ -121,6 +117,13 @@ p{
     margin-top: 60px;
 }
 
+.containerImage{
+    display: block;
+    width: 34%;
+    height: 90vh;
+    margin: auto;
+}
+
 .marco{
     position: absolute;
     width: 420px;
@@ -128,18 +131,15 @@ p{
     background-color: #01d194;
     box-shadow: 1px 1px 15px #000000ab;
     bottom: 0;
-    bottom: 0;
-    right: 5%;
+    z-index: -1;
 }
 
 .image{
     position: absolute;
-    width: 400px;
-    bottom: 0;
-    bottom: 0;
-    right: 5%;
     animation:scale-up-horizontal-center 0.4s;
     filter: grayscale(100%);
+    z-index: 0;
+    bottom: 0;
 }
 
 .downCurri{
@@ -154,30 +154,30 @@ p{
 }
 
 .container{
-    text-align: center;
-    color: #eafff6;
-    margin: 45px auto;
+    padding: 80px 0;
 }
 
 .tittleProject{
+    text-align: center;
+    color: #eafff6;
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 45px;
     text-shadow: 0px 1px 1px #01d194;
-    margin: 100px auto;
 }
 
 .containerProjects{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    width: 90%;
+    gap: 20px;
+    width: 100%;
     margin: auto;
+    padding: 30px 0;
     text-align: center;
 }
 
 .cart{
     width: 80%;
-    margin: auto;
+    margin: 20px auto;
     border-radius: 10px;
     padding: 20px;
     background-color: #cdfee7;
@@ -214,7 +214,10 @@ p{
 }
 
 .containerImgs{
-    margin: 15px;
+    display: flex;
+    justify-content: center;
+    margin: 15px 15px 25px 15px;
+    align-items: center;
 }
 
 .btnLink{
@@ -230,7 +233,7 @@ p{
 }
 
 .networksSocial{
-    width: 90%;
+    width: 100%;
     margin: auto;
     height: 200px;
     display: flex;
@@ -240,7 +243,7 @@ p{
 }
 
 .socialImg{
-    width: 40px;
+    width: 70px;
     filter: invert(99%) sepia(0%) saturate(472%) hue-rotate(214deg) brightness(113%) contrast(100%);
 }
 
@@ -275,4 +278,588 @@ p{
     100%{
         transform:scaleX(1);transform-origin:left center
     }
+}
+
+@media (max-width: 1100px) {
+    .firsText{
+        font-size: 25px;
+    }
+    
+    .position1{
+        top: 30%;
+    }
+
+    .curriculumGene{
+        width: 50%;
+    }
+
+    .curriculumGene p{
+        font-size: 14px;
+    }
+
+    .name{
+        font-size: 45px;
+    }
+
+    
+    .downCurri{
+        width: 80%;
+        font-size: 14px;
+    }
+
+    .marco{
+        width: 360px;
+        height: 360px;
+    }
+
+    .image{
+        width: 360px;
+        height: 480px;
+    }
+
+    .tittleProject{
+        font-size: 45px;
+    }
+
+    .containerProjects{
+        width: 90%;
+    }
+ 
+    .nameProject{
+        font-size: 22px;
+    }
+
+    .socialImg{
+        width: 60px;
+    }
+}
+
+@media (max-width: 950px) {
+    .firsText{
+        font-size: 20px;
+    }
+    
+    .position1{
+        top: 31%;
+    }
+    
+    .curriculumGene p{
+        font-size: 12px;
+    }
+
+    .name{
+        font-size: 38px;
+    }
+
+    .marco{
+        width: 330px;
+        height: 330px;
+    }
+
+    .image{
+        width: 330px;
+        height: 450px;
+    }
+
+    .downCurri{
+        width: 80%;
+        font-size: 12px;
+    }
+
+    .tittleProject{
+        font-size: 40px;
+    }
+
+    .containerProjects{
+        width: 85%;
+    }
+ 
+    .nameProject{
+        font-size: 20px;
+    }
+
+    .socialImg{
+        width: 58px;
+    }
+}
+
+@media (max-width: 850px){
+    .containerHome{
+        width: 95%;
+        height: 80vh;
+        margin: 0 auto;
+    }
+    
+    .position1{
+        top: 32%;
+    }
+
+    .downCurri{
+        width: 95%;
+    }
+
+    .containerImage{
+        width: 35%;
+    }
+
+    .marco{
+        width: 310px;
+        height: 310px;
+    }
+
+    .image{
+        width: 310px;
+        height: 430px;
+    }
+
+    .tittleProject{
+        font-size: 37px;
+    }
+
+    .containerProjects{
+        width: 90%;
+    }
+ 
+    .cart{
+        padding: 15px;
+    }
+
+    .nameProject{
+        font-size: 18px;
+    }
+
+    .img{
+        width: 37px;
+    }
+
+    .btnLink{
+        padding: 7px 33px;
+    }
+
+    .socialImg{
+        width: 53px;
+    }
+
+}
+
+@media(max-width: 800px){
+    .position1, .position2{
+        display: none;
+    }
+
+    .containerHome{
+        display: block;
+        width: 90%;
+        height: auto;
+    }
+
+    .curriculumGene{
+        width: 90%; 
+        height: 50vh;
+        margin: 20px auto 0px;     
+    }
+
+    .downCurri{
+        width: 65%;
+    }
+
+    .containerImage{
+        width: 100%;
+        height: 40vh;
+    }
+
+    .marco{
+        width: 245px;
+        height: 240px;
+        right: 5%;
+    }
+
+    .image{
+        width: 250px;
+        height: 330px;
+        right: 5%;
+    }
+
+    .container{
+        margin: auto;
+        padding: 0px;
+    }
+
+    .containerProjects{
+        width: 90%;
+    }
+
+}
+
+@media(max-width: 670px){
+    .curriculumGene{
+        width: 95%;
+    }
+    .downCurri{
+        width: 67%;
+    }
+    .containerProjects{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
+    .nameProject{
+        font-size: 20px;
+    }
+
+    .networksSocial{
+        height: 300px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin: 20px auto;
+        justify-items: center;
+    }
+
+    .socialImg{
+        width: 50px;
+        margin: auto;
+    }
+}
+
+@media(max-width:555px){
+    .downCurri{
+        width: 80%;
+    }
+}
+
+@media(max-width:520px){
+    .curriculumGene{
+        width: 85%;
+        height: 60vh;
+    }
+
+    .downCurri{
+        width: 95%;
+    }
+
+    .containerImage{
+        height: 60vh;
+        margin: 50px auto 0px;
+    }
+
+    .marco{
+        display: block;
+        position: relative;
+        margin: 0 auto;
+        right: 0;
+    }
+
+    .image{
+        top: 69.3%;
+        right: 25%;
+    }
+}
+
+
+@media(max-width: 425px){
+    .header{
+        display: none;
+        position: absolute;
+        height: 100vh;
+        z-index: 1;
+        background-color: #003026;
+    }
+    
+    nav{
+        height: 100vh;
+        margin: auto;
+    }
+
+    nav ul{
+        height: 100%;
+        flex-direction: column;
+    }
+
+    .position1{
+        display: block;
+        top: 14%;
+    }
+
+    .position2{
+        display: block;
+        top: 76%;
+    }
+
+    .containerImage{
+        margin: 85px auto 0px;
+    }
+
+    .image{
+        top: 76%;
+        right: 19%;
+    }
+    
+    .networksSocial{
+        height: 450px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .containerProjects{
+        width: 100%;
+    }
+
+    .cart{
+        width: 70%;
+        padding: 10px;
+        margin: auto;
+    }
+
+    .nameProject{
+        font-size: 18px;
+    }
+
+    .socialImg{
+        font-size: 42px;
+    }
+}
+
+@media(max-width: 350px){
+    .image{
+        right: 14%;
+    }
+}
+
+
+@media(max-width: 280px){
+    .position1{
+        display: block;
+        top: 14%;
+    }
+
+    .position2{
+        display: block;
+        top: 76%;
+    }
+
+    .containerHome{
+        margin: 20px auto;
+    }
+
+    .curriculumGene{
+        height: 80vh;
+    }
+
+    .curriculumGene p{
+        font-size: 14px;
+    }
+    .myName{
+        text-align: center;
+    }
+
+    .name{
+        font-size: 35px;
+    }
+
+    .curriDownload{
+        text-align: center;
+    }
+
+    .downCurri{
+        width: 100%;
+        text-align: center;
+    }
+
+    .containerImage{
+        height: 50vh;
+    }
+
+    .marco{
+        width: 200px;
+        height: 200px;
+    }
+
+    .image{
+        top: 99.5%;
+        width: 200px;
+        height: 270px;
+    }
+
+    .containerProjects{
+        padding: 2px;
+    }
+
+    .tittleProject{
+        font-size: 32px;
+        margin: 20px auto;
+    }
+
+    .cart{
+        width: 70%;
+        padding: 5px;
+    }
+
+    .containerImgs{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .img{
+        width: 30px;
+        margin: 5px;
+    }
+
+    .socialImg{
+        width: 35px;
+    }
+}
+
+
+@media(min-width: 375px) and (max-width: 667px){
+    .position2{
+        top: 72%;
+    }
+    
+    .curriDownload{
+        text-align: center;
+    }
+
+    .containerImage{
+        height: 45vh;
+    }
+
+    .marco{
+        margin-top: 40px;
+    }
+    
+    .image{
+        top: 73.4%;
+        right: 16%;
+    }
+
+    .socialImg{
+        width: 45px;
+    }
+}
+
+@media(min-width: 414px) and (max-width: 896px){
+    .position2{
+        top: 65%;
+    }
+
+    .image{
+        top: 70%;
+        right: 19%;
+    }
+
+    .containerImage{
+        height: 40vh;
+    }
+
+    .img{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .tittleProject{
+        margin: 20px;
+    }
+
+    .containerContact{
+        height: 580px;
+    }
+}
+
+@media(min-width: 390px) and (max-width: 894px){
+    .position2{
+        top: 65%;
+    }
+    
+    .image{
+        top: 70.6%;
+    }
+
+    .tittleProject{
+        margin: 20px;
+    }
+
+    .containerContact{
+        height: 580px;
+    }
+}
+
+@media(min-width: 430px) and (max-width: 932px){
+    .header{
+        display: none;
+        position: absolute;
+        height: 100vh;
+        z-index: 1;
+        background-color: #003026;
+    }
+    
+    nav{
+        height: 100vh;
+        margin: auto;
+    }
+
+    nav ul{
+        height: 100%;
+        flex-direction: column;
+    }
+
+    .position1{
+        display: block;
+        top: 14%;
+    }
+
+    .position2{
+        display: block;
+        top: 65%;
+    }
+
+    .containerImage{
+        height: 30vh;
+    }
+
+    .image{
+        top: 65.9%;
+    }
+}
+
+@media(min-width: 412px) and (max-width: 915px){
+    .containerImage{
+        height: 35vh;
+    }
+    
+    .image{
+        top: 69.8%;
+        right: 19%;
+    }
+}
+
+@media(min-width: 360px) and (max-width: 740px){
+    .position2{
+        top: 70%;
+    }
+    
+    .containerImage{
+        height: 40vh;
+    }
+    
+    .image{
+        top: 72%;
+        right: 15%;
+    }
+}
+
+@media(min-width: 412px) and (max-width: 915px){
+    .position2{
+        top: 65%;
+    }
+    
+    .containerImage{
+        height: 35vh;
+    }
+    
+    .image{
+        top: 69.9%;
+        right: 19%;
+    }
+}
+
+@media(min-width: 768px) and (max-width: 1024px){
+
 }
