--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,6 +32,11 @@ nav{
     width: 100%;
 }
 
+.btnMenu{
+    background-color: transparent;
+    border: none;
+}
+
 .menu{
     display: none;
     width: 30px;
