--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,7 +40,8 @@ nav{
 .menu{
     display: none;
     width: 30px;
-    margin: 20px;
+    margin: 10px;
+    padding: 10px;
     filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(217deg) brightness(109%) contrast(102%);
     cursor: pointer;
 }
