--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,8 +40,8 @@ nav{
 
 .menu{
     display: none;
-    width: 30px;
-    margin: 10px;
+    width: 25px;
+    margin: 18px;
     padding: 10px;
     filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(217deg) brightness(109%) contrast(102%);
     cursor: pointer;
@@ -59,6 +59,10 @@ nav{
     filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(217deg) brightness(109%) contrast(102%);
     top: 6%;
     left: 8%;
+}
+
+.no-scroll {
+    overflow: hidden;
 }
 
 ul{
@@ -570,7 +574,7 @@ p{
 }
 
 
-@media(max-width: 425px){
+@media(max-width: 435px){
     .header{
         position: absolute;
         height: 100%;
@@ -605,12 +609,12 @@ p{
 
     .position1{
         display: block;
-        top: 14%;
+        top: 17%;
     }
 
     .position2{
         display: block;
-        top: 76%;
+        top: 80%;
     }
 
     .containerImage{
@@ -618,7 +622,7 @@ p{
     }
 
     .image{
-        top: 76%;
+        top: 80%;
         right: 19%;
     }
     
