--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -140,7 +140,6 @@ p{
     display: block;
     width: 34%;
     height: 90vh;
-    margin: auto;
 }
 
 .marco{
@@ -162,7 +161,7 @@ p{
 }
 
 .downCurri{
-    width: 80%;
+    width: 60%;
     text-decoration: underline;
     color: #01d194;
     text-align: center;
@@ -182,6 +181,7 @@ p{
     text-transform: uppercase;
     font-size: 45px;
     text-shadow: 0px 1px 1px #01d194;
+    margin: 60px;
 }
 
 .containerProjects{
@@ -253,8 +253,8 @@ p{
 
 .networksSocial{
     width: 100%;
-    margin: auto;
-    height: 200px;
+    margin: 20px auto;
+    height: 350px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -459,6 +459,10 @@ p{
         width: 53px;
     }
 
+    .networksSocialImg{
+        margin-bottom: 60px;
+    }
+
 }
 
 @media(max-width: 800px){
@@ -506,6 +510,11 @@ p{
 
     .containerProjects{
         width: 90%;
+    }
+
+    .networksSocial{
+        height: max-content;
+        margin: 80px;
     }
 
 }
@@ -556,7 +565,7 @@ p{
     }
 
     .containerImage{
-        height: 60vh;
+        height: 30vh;
         margin: 50px auto 0px;
     }
 
@@ -568,8 +577,8 @@ p{
     }
 
     .image{
-        top: 69.3%;
-        right: 25%;
+        top: 73%;
+        right: 23%;
     }
 }
 
@@ -614,16 +623,15 @@ p{
 
     .position2{
         display: block;
-        top: 80%;
+        top: 70%;
     }
 
     .containerImage{
-        height: 50vh;
         margin: 85px auto 0px;
     }
 
     .image{
-        top: 80%;
+        top: 72.7%;
         right: 19%;
     }
     
