--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -175,13 +175,18 @@ p{
     padding: 80px 0;
 }
 
+.containerContact{
+    height: 500px;
+    padding: 30px;
+}
+
 .tittleProject{
     text-align: center;
     color: #eafff6;
     text-transform: uppercase;
     font-size: 45px;
     text-shadow: 0px 1px 1px #01d194;
-    margin: 60px;
+    margin: 30px;
 }
 
 .containerProjects{
@@ -253,7 +258,7 @@ p{
 
 .networksSocial{
     width: 100%;
-    margin: 20px auto;
+    margin: 0px auto;
     height: 350px;
     display: flex;
     flex-direction: row;
